--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -5,5 +5,34 @@
     "skills": "Skilles",
     "projects": "Projects",
     "about": "About",
-    "contact": "Contact"
+    "contact": "Contact",
+    "headerTitle": "Hi, I'm Nebil Sahin",
+    "headerSubtitle": "and <span class='red'>welcome</span>  to my portfolio.",
+    "exploreProjects": "Explore Projects",
+    "aboutTitle": "About Me",
+    "aboutSubtitle": "Get to know me!",
+    "aboutText": "My name is Nebil Sahin and I'm a Full-stack developer, designer and an artist. I bring a unique perspective to every project I undertake. With expertise in both technical and creative fields, I am able to create custom solutions that are both visually stunning and functionally sound. My passion for coding and design allows me to push the boundaries of what is possible, while my artistic background ensures that every project I work on is infused with a sense of creativity and originality.",
+    "resume": "Resume/CV",
+    "mySkills": "My Skills",
+    "webTitle": "Web",
+    "mobileTitle": "Mobile",
+    "designTitle": "Design/Art",
+    "otherTitle": "Other",
+    "luytenTitle": "Luyten",
+    "luytenDescription": "Luyten Is a general purpose React-Native app with the backend being Laravel. It is meant as an app to post and share articles with other people. This app's main focus is the feel and the functionality of it and was built as a practice app.",
+    "techStack": "Tech Stack",
+    "checkItOut": "Check it out",
+    "personalProject": "Personal Project",
+    "workProject": "Work Project",
+    "freelanceProject": "Freelance Project",
+    "visit": "Visit Website",
+    "digitalfuture": "Digital Future",
+    "digitalfutureDescription": "Digital future is a company website that has been built with WordPress and multiple custome elements and theme.",
+    "advanceExperts": "Advance Experts",
+    "advanceExpertsDescription": "Advance Experts is a company website that has been built with WordPress and multiple custome elements and theme.",
+    "githubPage":"Visit Github Page",
+    "toolsUsed": "ToolsUsed",
+    "mangaArabia": "Manga Arabia",
+    "mangaArabiaDescription": "Long Live The Dead is a story by Manga Arabia that I was the background artist for. I have created, drwan and inked over 60 pages worth of background art.",
+    "contactSubtitle": "Get in touch with me!"
 }
