Footer and background image

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -34,5 +34,9 @@
     "toolsUsed": "ToolsUsed",
     "mangaArabia": "Manga Arabia",
     "mangaArabiaDescription": "Long Live The Dead is a story by Manga Arabia that I was the background artist for. I have created, drwan and inked over 60 pages worth of background art.",
-    "contactSubtitle": "Get in touch with me!"
+    "contactSubtitle": "Get in touch with me!",
+    "email": "nebil.s@hotmail.com!",
+    "github": "Github",
+    "linkedin": "Linkedin"
+
 }
