--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -37,6 +37,7 @@
     "contactSubtitle": "Get in touch with me!",
     "email": "nebil.s@hotmail.com!",
     "github": "Github",
-    "linkedin": "Linkedin"
+    "linkedin": "Linkedin",
+    "loading": "Loading"
 
 }
